src/2_chatbot/yamls/v1/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: shinhan
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 8501
    targetPort: 8501
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: shinhan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: registry.gocap.kr/shinhan/app:test
        ports:
        - containerPort: 8501
