src/2_chatbot/yamls/v1/gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: shinhan-gateway-v1
  namespace: shinhan
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - v1.shinhan.dudaji.com
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - v1.shinhan.dudaji.com
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: shinhan-v1-tls
      mode: SIMPLE
